--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   lottie: ^3.1.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +63,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/navbar/it.png
-    - assets/animation/profile.json
+    - assets/navbar/
     - assets/sosmed/
+    - assets/skills/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
