--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.1.2
   font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
